--- a/view/package.json
+++ b/view/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.6.2",
     "bulma": "^0.9.4",
     "chart.js": "^4.4.0",
+    "form": "^0.2.4",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
