--- a/view/package.json
+++ b/view/package.json
@@ -9,7 +9,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@supabase/supabase-js": "^2.38.5",
-    "@supabase/supabase-js": "^2.38.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,13 +16,11 @@
     "bootstrap": "^5.3.2",
     "bulma": "^0.9.4",
     "chart.js": "^4.4.0",
-    "axios": "^1.6.2",
-    "bulma": "^0.9.4",
-    "chart.js": "^4.4.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
